--- a/AspectofSelf(Perdev,HO).html
+++ b/AspectofSelf(Perdev,HO).html
@@ -125,104 +125,211 @@
 <div class="bodyAspectofSelf_container_textarea_Earlypsychologicalthought" id="Earlypsychologicalthought">
 <h2>Early psychological thought</h2>
 <p>
-    Ancient Greek philosophers, from Thales (fl. 550 BC) through even to the Roman period, developed an \
+    Ancient Greek philosophers, from Thales (fl. 550 BC) through even to the Roman period, developed an
     elaborate theory of what they termed the psuchẽ (psyche) (from which the first half of "psychology" is derived), 
     as well as other "psychological" terms – nous, thumos, logistikon, etc.The most influential of these are 
     the accounts of Plato (especially in the Republic),Pythagoras and of Aristotle (esp. Peri Psyches, 
-    better known under its Latin title, De Anima).Plato's tripartite theory of the soul, Chariot Allegory 
+    better known under its Latin title, De Anima).
+</p>    
+<p>   
+   Plato's tripartite theory of the soul, Chariot Allegory 
     and concepts such as eros defined the subsequent Western Philosophy views of the psyche and anticipated modern psychological proposals, 
     such as Freud's id, ego and super-ego and libido; to the point that "in 1920, Freud decided to present Plato as the precursor of his own theory, 
     as part of a strategy directed to define the scientific and cultural collocation of psychoanalysis".[13] Hellenistic philosophers 
     (viz., the Stoics and Epicurians) diverged from the Classical Greek tradition in several important ways, especially in their 
     concern with questions of the physiological basis of the mind.The Roman physician Galen addressed these issues most elaborately and 
     influentially of all. The Greek tradition influenced some Christian and Islamic thought on the topic.
+</p> 
+</div>
+<div class="bodyAspectofSelf_container_textarea_PersonOfPsychology" id="PersonOfPsychology" >
+<h2>Person Of Psychology</h2>
+<p>
+    Psychology is the study of the mind. Men and women have grappled for centuries to unlock the 
+    mysteries within ourselves. This challenge has demanded the attention of history’s greatest thinkers.
+</p>
+<p>
+    We owe much of what we understand about ourselves to the brilliant minds that came before us. 
+    The history of psychology is populated with genius, and no shortage of eccentricity, they are psychologists 
+    that helped lay the groundwork for our understanding of the human mind, mental health, and mental disorder, 
+    as well as those who helped to shape the education and profession surrounding psychology..
+</p>
+<div class="bodyAspectofSelf_container_textarea_PersonOfPsychology_contentwpic1">
+<div class="bodyAspectofSelf_container_textarea_PersonOfPsychology_contentwpic1_Main">
+<h3>Socrates</h3>
+<p>
+    Socrates seems to have often said that his wisdom was limited to an awareness of his own ignorance. 
+    Socrates may have believed that wrongdoing was a consequence of ignorance, that those who did wrong 
+    knew no better. 
+</p>
+<p>
+    The one thing Socrates consistently claimed to have knowledge of was "the art of love" 
+    which he connected with the concept of "the love of wisdom", i.e., philosophy. He never actually claimed 
+    to be wise, only to understand the path that a lover of wisdom must take in pursuing it. It is debatable 
+    whether Socrates believed that humans (as opposed to gods like Apollo) could actually become wise. 
+</p>
+<p>
+    On the one hand, 
+    he drew a clear line between human ignorance and ideal knowledge; on the other, Plato's Symposium (Diotima's Speech) 
+    and Republic (Allegory of the Cave) describe a method for ascending to wisdom
 </p>
 </div>
-<div class="bodyPowerofthemind_container_textarea_powerofthemind" id="powerofthemind" >
-<h2>Power of the Mind</h2>
+<div class="bodyAspectofSelf_container_textarea_PersonOfPsychology_contentwpic1_Picture">
+<img src="Assets/Socrates.jpg" alt="Socrates" width="auto" height="500px">
+</div>
+</div>
+<div class="bodyAspectofSelf_container_textarea_PersonOfPsychology_contentwpic">
+<h3>Plato</h3>
 <p>
- using Mind Map effectively
+    Plato proposed that the human psyche was the seat of all knowledge and that the human mind was imprinted with all of the 
+    knowledge it needed. As a result, learning was a matter of unlocking and utilizing this inbuilt knowledge, a process he called anamnesis.
+    In his famous work, 'The Republic,' Plato further developed this idea and first proposed the idea that the mind consisted of three interwoven parts, called the Tripartite Mind.
 </p>
 <ul>
-    <li> Use single word or simple phrases</li>
-    <li>Many words in normal writing are padding ase the ensure that fact are conveyed
-        in the correct context and in a format that is pleasant read.
+    <li>
+        <h3>The Logistikon</h3>
+        <p>This was the intellect, the seat of reasoning and logic</p>
+    </li>
+    <li>
+        <h3>The Thumos</h3>
+        <p>his was the spiritual centre of the mind, and dictated emotions and feelings.</p>
+    </li>
+    <li>
+        <h3>The Epithumetikon</h3>
+        <p>This part governed desires and appetites.</p>
     </li>
 </ul>
-<p> in mind map, every single, strong words and short meaningful phrases can convey the same 
-    meaning more ptenly. Excess word just clutter the mind map
+<p>
+    According to Plato, the healthy mind discovered a balance between the three parts, 
+    and an over reliance upon these parts led to the expression of personality. 
+    For example, gluttony and selfishness could be explained by a dominance of the Epithumetikon, letting desires govern behavior
+</p>
+<img src="Assets/Plato.png" alt="Plato">
+</div>
+<div class="bodyAspectofSelf_container_textarea_PersonOfPsychology_contentwpic">
+<h3>Aristotle</h3>
+<img src="Assets/aristotle.png" alt="Aristotle">
+<p>
+    Aristotle, building upon the work of the earlier philosophers and their studies into mind, reasoning and thought, 
+    wrote the first known text in the history of psychology, called Para Psyche, 'About the Mind.' In this landmark work, 
+    he laid out the first tenets of the study of reasoning that would determine the direction of the history of psychology; 
+    many of his proposals continue to influence modern psychologists.
 </p>
 <p>
-    there are four recognized thingking style:
+    In the book, the definition of psyche, as was common at the time, used 'mind' and 'soul' interchangeably, 
+    with the Ancient Greek philosophers feeling no need to make no distinction between the two. 
 </p>
-<h3>Synthesists</h3>
 <p>
-    Stand-out with their creativity and curiosity; they like consider different idea views and possibilites
-</p>
-<h3>Idealist</h3>
-<p>
-    They arw always setting and workinf toward big goals they set the bar high and expect others todo the same
-</p>
-<h3>Paragmatists</h3>
-<p>
-    take a logical approach to problem-solving; they focus on immdiate results, as opposed the long term effect
-</p>
-<h3>Analysts</h3>
-<p>
-    they are interested in the facts and data point they have clear procedure for doing all thing.
-</p>
-<h3>Realist</h3>
-<p>
-    they are the perfect problem solver; tackle prblems head-on and don't feel challanged by
-    your everydat conundrum
+    In Para Psyche, Aristotle's psychology proposed that the mind was the 'first entelechy,' or 
+    primary reason for the existence and functioning of the body. This line of thought was heavily 
+    influenced by Aristotle's zoology, where he proposed that there were three types of souls defining life; 
+    the plant soul, the animal soul and the human soul, which gave humanity the unique ability to reason and create. I
+    nterestingly, this human soul was the ultimate link with the divine and Aristotle believed that mind and reason 
+    could exist independently of the body.
 </p>
 </div>
-
-<div class="bodyPowerofthemind_container_textarea_learningsytle" id="learningstyle">
-<h2>Learning Styles</h2>
+<div class="bodyAspectofSelf_container_textarea_PersonOfPsychology_contentwpic">
+<h3>Rene Descartes</h3>
+<img src="Assets/Rene.jpg" alt="Rene Descartes">
 <p>
-    Among the different ways of learning, some prefer to learn by hearing, some by seeing, others by doing, some by reading and others by asking questions. 
-    One thing all students have in common is that they all learn best when they can incorporate items and topics that interest them into their studies.
+    Rene Descartes (1596-1650) was a French philosopher and mathematician. Considered the 
+    "father of modern philosophy" Descartes developed many ideas that lead to the creation of many modern fields of study. 
+    As a mathematician he developed concepts that linked algebra and geometry which eventually led to the evolution of calculus.
 </p>
-<h3>Visual (spatial) Learner</h3>
 <p>
-    Visual learners are those who prefer learning by observing things. Using pictures, images, diagrams, whiteboards and more helps these types of 
-    understand information bette
+    In psychology Descartes is most known for his concept of dualism. Descartes' theory of dualism suggests that there are two realms to existence. 
+    The first is the physical realm which is the environment and the things around us. This is the "realm of matter and energy". 
+    This realm can be researched and is scientific because it operates in a prescribed "mechanical" way. The other realm is mental and is
+    "transcendent" to the physical environment and cannot be measured.
 </p>
-<h3>Aural (auditory) Learner</h3>
 <p>
-    Sound and music are a strong suit for these types of learners who typically have a good sense of rhythm. These learners are usually 
-    singers or musicians who are familiar with different instruments and the sounds they make.
+    Dualism allowed for the separation of sciences and the non-physical realm, which was important long ago because it allowed scientists 
+    to conduct their research without fear of being considered heretics by religious groups. Dualism creates a problem for psychologists and the study of the mind: 
+    psychologists can ignore the mind entirely and view behavior as purely mechanical or include the mind in study but it not be considered "scientific".
 </p>
-<h3>Verbal (linguistic) Learner</h3>
+</div>
+<div class="bodyAspectofSelf_container_textarea_PersonOfPsychology_contentwpic">
+<h3>Gilbert Ryle</h3>
 <p>
-    These learners prefer using words, both in speech and writing. They can easily express themselves and usually love to read and write. 
-    Verbal learners tend to have a vast vocabulary and excel in activities that involve speaking, debating, and journalism.
+    Through this work, Ryle is thought to have accomplished two major tasks. First, he was seen to have put the final nail in the coffin of Cartesian dualism. 
+    Second, as he himself anticipated, he is thought to have argued on behalf of, and suggested as dualism's replacement, the doctrine known as philosophical 
+    (and sometimes analytical) behaviourism. Sometimes known as an “ordinary language”, sometimes as an “analytic” philosopher, Ryle—even when mentioned in the same 
+    breath as Wittgenstein and his followers—is considered to be on a different, somewhat idiosyncratic (and difficult to characterise), philosophical track.
 </p>
-<h3>Physical (kinesthetic) Learner</h3>
 <p>
-    Whether it’s by using their body or hands, these learners are all about the sense of touch. Physical activities and sports play a big part in these student’s lives. 
-    Getting hands-on is a must for these learners who love to tinker and learn best when they can do rather than see or hear.
+    Ryle analogizes philosophy to cartography. Competent speakers of a language, Ryle believes, are to a philosopher what ordinary villagers are to a mapmaker: 
+    the ordinary villager has a competent grasp of his village, and is familiar with its inhabitants and geography. But when asked to interpret a map of that 
+    knowledge, the villager will have difficulty until he is able to translate his practical knowledge into universal cartographic terms. The villager thinks 
+    of the village in personal and practical terms, while the mapmaker thinks of the village in neutral, public, cartographic terms.
 </p>
-<h3>Logical (mathematical) Learner</h3>
-<p>    
-    If there is logic, reasoning and numbers involved, these learners are sure to excel. These students function and solve complex problems by employing strategies and their 
-    scientific way of thinking. Computer programming, math and science are usually favored by these types of learners. 
+<p>
+    By "mapping" the words and phrases of a particular statement, philosophers are able to generate what Ryle calls implication threads: each word or phrase of a statement 
+    contributes to the statement in that, if the words or phrases were changed, the statement would have a different implication. The philosopher must show the directions 
+    and limits of different implication threads that a "concept contributes to the statements in which it occurs." To show this, he must be "tugging" at neighbouring threads, 
+    which, in turn, must also be "tugging." Philosophy, then, searches for the meaning of these implication threads in the statements in which they are used.
 </p>
-<h3>Social (interpersonal) Learner</h3>
-<p>    
-    Learning in groups and working with others is favored by social learners. These students know how to communicate effectively and enjoy collaborating with others, 
-    brainstorming and discussing ideas and concepts. Social learners are generally good listeners who are thoughtful and understanding
+<img src="Assets/Gilbert.png" alt="Gilbert Ryle">
+</div>
+<div class="bodyAspectofSelf_container_textarea_PersonOfPsychology_contentwpic">
+    <h3>Emmanuel Kant</h3>
+    <p>
+        Immanuel Kant was one of the greatest philosophers of all time, and had more 
+        influence on other renounced thinkers than any other philosopher of the 18th century. 
+        He was inspired by his study of Hume's writings, especially Hume's psychological analysis of causality. 
+        One of his greatest contributions to philosophy was the merging of rationalism and empiricism.
+    </p>
+    <p>
+        Kant argued that the mind brings to experience certain qualities of its own that order it. 
+        These are the twelve a priori [deductive] categories of causality, unity, totality, and the like, 
+        and the a priori intuitions of time and space. While the mind has no substance, it is an active process 
+        that serves to convert raw sensory data into meaningful, ordered experiences. Kant names the process apperception. 
+        Things in themselves cannot be known, we perceive the world only the way our mind makes us do it, i.e., through the 
+        instrumentality of the innate mental categories. Kant thus accepted the notion of mental facilities--cognition, 
+        feeling, desire understanding, judgement, and reason. . . .
+    </p>
+    
+    <img src="Assets/Emmanuel.png" alt="Emmanuel Kant">
+</div>
+<div class="bodyAspectofSelf_container_textarea_PersonOfPsychology_contentwpic">
+    <h3>David Humes</h3>
+    <img src="Assets/David humes.png" alt="">
+    
+    <p>
+        Empiricist philosophers, such as Hume and Berkeley, favoured the bundle theory of personal identity.
+        In this theory, "the mind itself, far from being an independent power, is simply 'a bundle of perceptions' 
+        without unity or cohesive quality".The self is nothing but a bundle of experiences linked by the relations
+        of causation and resemblance; or, more accurately, the empirically warranted idea of the self is just the idea
+        of such a bundle. According to Hume
+    </p>
+    <p>
+        This view is supported by, for example, positivist interpreters, who have seen Hume as suggesting that terms such as "self", 
+        "person", or "mind" refer to collections of "sense-contents". A modern-day version of the bundle theory of the mind has 
+        been advanced by Derek Parfit in his Reasons and Persons.
+    </p>
+    <p>
+        However, some philosophers have criticised Hume's bundle-theory interpretation of personal identity. They argue that distinct 
+        selves can have perceptions that stand in relation to similarity and causality. Thus, perceptions must already come parcelled 
+        into distinct "bundles" before they can be associated according to the relations of similarity and causality. In other words, 
+        the mind must already possess a unity that cannot be generated, or constituted, by these relations alone. S
+    </p>
+</div>
+</div>
+<div class="bodyAspectofSelf_container_textarea_Conclusion" id="learningstyle">
+<h2>Conclusion</h2>
+<p>
+   Psychology is been flourish through years and really cultivated by our beloved scholars, all thier statement might be true or false but one thing is certain
+   that is human si build up with different aspect to be called self. humanity is very interesting species of life. for some reason we are the only life on Earth
+   to questions what we are? why we are? and How we are?, as mentioned earlier many scholar is curios enough to question how our consciousness works and how does 
+   somrthing to be consisdered to be called self. Many in this belief simplified that self is build up of two or more aspect just like soul and the material being or 
+   bodies. For me all these belief is reasonable and very well said, they also presented thier evidence for supporting their beleif to be true
+   but one thing is certain.
 </p>
-<h3>Solitary (intrapersonal) Learner</h3>
-<p>    
-    These students prefer to use self-study and work alone. They are independent and are very self-aware and in tune with their thoughts and feelings. 
-    These learners prefer being away from the crowds and learn best in a quiet place where they can focus on the task at hand.
+<p>
+    <i>"The bueaty of life is its curiosity"</i>
 </p>
 </div>
 </div>
 </div>
-<div class="bodyPowerofthemind_activity_section containerwithsidebar" id="activity">
+<div class="bodyAspectofSelf_activity_section containerwithsidebar" id="activity">
     <h1>Activity:</h1>
     <h5>In-class Exercises:</h5>
     <p>Click the link below and answer. Screenshot your result it will be graded.</p>
@@ -233,7 +340,7 @@
     </a> 
 </div>
 </div>
-<div class="bodyPowerofthemind_stickyui sidebar">
+<div class="bodyAspectofSelf_stickyui sidebar">
         <div class="bodyPowerofthemind_stickyui_content">
         <h1>Topic Outline</h1>
         <h2>Power<br> of the Mind</h2>
