tapos na perdev lols

--- a/AspectofSelf(Perdev,HO).html
+++ b/AspectofSelf(Perdev,HO).html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" size= 32x32; type="image/img" href="Assets/Logo(Favicon).png">
-    <title>Power of the mind (HO)</title>
+    <title>Aspect of Self (PerDevHO)</title>
     <link rel="stylesheet" href="scss/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="preconnect" href="https://fonts.gstatic.com">
