--- a/r&w_ho.html
+++ b/r&w_ho.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" size= 32x32; type="image/img" href="./Assets/Logo(Favicon).png">
-    <title>Personal Development HO</title>
+    <title>Reading and Writing HO</title>
     <link rel="stylesheet" href="./scss/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="preconnect" href="https://fonts.gstatic.com">
@@ -53,7 +53,7 @@
         <ul class="header_secondlink_list_handouts_container_list">
         <li><a href="perdev_ho.html">Personal Development</a></li>
         <li><span></span></li>
-        <li><a href="r&w_ho.html">Reading and Writing</a></li>
+        <li><a href="#">Reading and Writing</a></li>
         <li><span></span></li>
         <li><a href="#">Earth and Life Science</a></li>
         </ul>
@@ -97,76 +97,68 @@
 </nav>
 </header>
 
-<body class="bodyPerdevHO"> 
-<div class="bodyPerdevHO_title">
-<h1 class="">Personal Development</h1>
-<h4>Monday, Wednesday</h4>
+<body class="bodyrNwHO"> 
+<div class="bodyrNwHO_title">
+<h1 class="">Reading and Writing</h1>
+<h4>Thursday, Wednesday</h4>
 <h4 id="title">Teacher: Ana Marie Altarejos</h4>
 </div>
-<div class="bodyPerdevHO_container">
+<div class="bodyrNwHO_container">
    
-      <div class="bodyPerdevHO_container_content">
+      <div class="bodyrNwHO_container_content">
         
-        <div class="bodyPerdevHO_container_content_item">
-        <h2>Stress</h2>
-        <h6>December 1 2020</h6>
+        <div class="bodyrNwHO_container_content_item">
+        <h2>Articles</h2>
+        <h6>December 3 2020</h6>
         <p>
-            Stress is a feeling of emotional or physical tension. 
-            It can come from any event or thought that makes you feel frustrated, angry, or nervous. 
-            Stress is your body's reaction to a challenge or demand. In short bursts, stress can be positive, 
-            such as when it helps you avoid danger or meet a deadline.....
+            An article is a written work published in a print or electronic medium. 
+            It may be for the purpose of propagating news, research results, academic analysis, 
+            or debate.  The main motive behind writing an article is that it should be published 
+            in either newspapers or magazines or journals so as to make some difference to the world.
+            It may be the topics of interest of the writer or it may be related to some current issues. 
+            The topic can either be serious or not-so-serious; Same goes for its tone and language......
         </p>
-        <a href="Stress(Perdev,HO).html">
+        <a href="#">
         <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>
         </div>
-        <div class="bodyPerdevHO_container_content_item">
-        <h2>Power of the Brain</h2>
-        <h6>December 7 2020</h6>
+        <div class="bodyrNwHO_container_content_item">
+        <h2>Abstract Writing</h2>
+        <h6>December 20 2020</h6>
         <p>
-                The theory of the whole-brain-work basically explain the oscillatory
-                dynamics of the humans and nonhuman brain during cognitive processing. the theory
-                is based on principle according to which brain function are 
-                represented by the oscillatory.....
+            An abstract is a 150- to 250-word paragraph that provides readers with a 
+            quick overview of your essay or report and its organization. It should express 
+            your thesis (or central idea) and your key points; it should also suggest any implications or 
+            applications of the research you discuss in the paper.
         </p>
-        <a href="PoweroftheMind(Perdev,HO).html">
+        <a href="#">
             <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>      
         </div>
         <div class="bodyPerdevHO_container_content_item">
-        <h2>Aspect of Life</h2>
-        <h6>January 5 2021</h6>
+        <h2>Posistion Papers</h2>
+        <h6>January 7 2021</h6>
         <p>
-            There is so many people has contributed in field of psychology and it make a resounding afffect within
-            the said field.
-            Psychology borders on various other fields including physiology, neuroscience, sociology, anthropology, 
-            as well as philosophy and other components of the humanities. The history of psychology as a scholarly 
-            study of the mind and behavior dates back to the Ancient Greeks. There is also evidence of psychological 
-            thought in ancient Egypt. A high level of work on mind-sciences can be found in Vedic scriptures of Sanatana Dharm (Hinduism), 
-            an application of certain principles as a part of yogic practices of India.....
+            A position paper (sometimes position piece for brief items) is an essay that presents an arguable opinion about an issue
+            typically that of the author or some specified entity. Position papers are published in academia, in politics, in law and other domains. 
+            The goal of a position paper is to convince the audience that the opinion presented is valid and worth listening to. Ideas for position 
+            papers that one is considering need to be carefully examined when choosing a topic, developing an argument, and organizing the paper.
+            Position papers range from the simplest format of a letter to the editor, through to the most complex in the form of an academic position paper.
+            Position papers are also used by large organizations to make public the official beliefs and recommendations of the group.
         </p>
-        <a href="AspectofSelf(Perdev,HO).html">
+        <a href="#">
             <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>
         </div>
         <div class="bodyPerdevHO_container_content_item">
-        <h2>Family</h2>
-        <h6>January 18 2021</h6>
+        <h2>Business Proposal</h2>
+        <h6>January 21 2021</h6>
         <p>
-            Family is the most basic unit of a community.The Filipino family provides an interesting study because familism is embedded in its social
-            sphere, translating its relational quality outside the family. Being family-centred, child-centric,
-            having close ties, and a large family size (Medina, 2001; Miralao, 1994) are some basic elements of
-            families in the Philippines. Applying regression on the data from the World Values Survey for the
-            Philippines in 1996 and 2001, this study aims to explore the correlates of views on family values
-            among Filipinos, specifically those concerning the traditional nuclear family set-up, the woman's
-            roles within family, and the reciprocal relationship of the parent and child. While the results
-            show that Filipinos generally share family values, especially on those related to child rearing for
-            both parents, and child-bearing, there are indications that such views also differ across educational attainment, 
-            geographic location, social class, and ethnic groups. Disparities in views could
-            be reflecting shifting family values, which could then help explain current polarising policy
-            debates on issues on the reproductive health, divorce, and migration.......
+            A project proposal is a document that describes a proposed project and its purpose, outcomes, and the steps that will be taken to complete the project. 
+            Not to be confused with a project contract, which is the formal agreement between two parties to complete a project, a project proposal’s purpose is to 
+            communicate how a company, team, or individual plan to approach a project.
         </p>
-        <a href="Family(Perdev,HO).html">
+        <a href="#">
             <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>
         </div>
