--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <ul class="header_secondlink_list_handouts_container_list">
         <li><a href="perdev_ho.html">Personal Development</a></li>
         <li><span></span></li>
-        <li><a href="#">Reading and Writing</a></li>
+        <li><a href="r&w_ho.html">Reading and Writing</a></li>
         <li><span></span></li>
         <li><a href="#">Earth and Life Science</a></li>
         </ul>
