--- a/r&w_ho.html
+++ b/r&w_ho.html
@@ -118,7 +118,7 @@
             It may be the topics of interest of the writer or it may be related to some current issues. 
             The topic can either be serious or not-so-serious; Same goes for its tone and language......
         </p>
-        <a href="#">
+        <a href="Article(r&w,HO).html">
         <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>
         </div>
