--- a/r&w_ho.html
+++ b/r&w_ho.html
@@ -100,7 +100,7 @@
 <body class="bodyrNwHO"> 
 <div class="bodyrNwHO_title">
 <h1 class="">Reading and Writing</h1>
-<h4>Thursday, Wednesday</h4>
+<h4>Thursday, Fridayy</h4>
 <h4 id="title">Teacher: Ana Marie Altarejos</h4>
 </div>
 <div class="bodyrNwHO_container">
@@ -131,7 +131,7 @@
             your thesis (or central idea) and your key points; it should also suggest any implications or 
             applications of the research you discuss in the paper.
         </p>
-        <a href="#">
+        <a href="Abstract Writing(r&w,HO).html">
             <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>      
         </div>
