proct proposal otw

--- a/r&w_ho.html
+++ b/r&w_ho.html
@@ -146,19 +146,19 @@
             Position papers range from the simplest format of a letter to the editor, through to the most complex in the form of an academic position paper.
             Position papers are also used by large organizations to make public the official beliefs and recommendations of the group.
         </p>
-        <a href="#">
+        <a href="Posistion Paper(r&w,HO).html">
             <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>
         </div>
         <div class="bodyPerdevHO_container_content_item">
-        <h2>Business Proposal</h2>
+        <h2>Project Proposal</h2>
         <h6>January 21 2021</h6>
         <p>
             A project proposal is a document that describes a proposed project and its purpose, outcomes, and the steps that will be taken to complete the project. 
             Not to be confused with a project contract, which is the formal agreement between two parties to complete a project, a project proposal’s purpose is to 
             communicate how a company, team, or individual plan to approach a project.
         </p>
-        <a href="#">
+        <a href="Project Proposal(r&w,HO).html">
             <button class="bodyPerdevHO_container_content_item_btn">READ MORE</button>
         </a>
         </div>
